--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-30T12:05:40.505456Z",
-     "start_time": "2020-11-30T12:05:40.065212Z"
+     "end_time": "2020-12-15T05:01:09.841343Z",
+     "start_time": "2020-12-15T05:01:09.460791Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-30T12:05:43.848644Z",
-     "start_time": "2020-11-30T12:05:41.054443Z"
+     "end_time": "2020-12-15T05:01:13.091721Z",
+     "start_time": "2020-12-15T05:01:10.619045Z"
     }
    },
    "outputs": [],
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-30T12:05:43.886408Z",
-     "start_time": "2020-11-30T12:05:43.881294Z"
+     "end_time": "2020-12-15T05:01:13.110082Z",
+     "start_time": "2020-12-15T05:01:13.104841Z"
     }
    },
    "outputs": [],
@@ -3463,6 +3463,140 @@
     "grad = _optimizer.compute_gradients(loss_op)\n",
     "optimize_op = _optimizer.apply_gradients(grad)\n",
     "```  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-15T06:46:42.636254Z",
+     "start_time": "2020-12-15T06:46:42.475537Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'a:0', u'a_2:0', u'b:0']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> a:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2.], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> grad_vars:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(array([1., 1.], dtype=float32), array([1., 2.], dtype=float32)),\n",
+       " (array([1., 1.], dtype=float32), array([10., 20.], dtype=float32)),\n",
+       " (array([11., 22.], dtype=float32), array([1., 1.], dtype=float32))]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> a after GD:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> a_2 after GD:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9., 19.], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> b after GD:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-10., -21.], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# executed by tf1.12\n",
+    "tf.reset_default_graph()\n",
+    "a = tf.Variable([1., 2.], name=\"a\")\n",
+    "a_2 = tf.Variable([10., 20.], name=\"a_2\")\n",
+    "b = tf.Variable([1., 1.], name=\"b\")\n",
+    "c = a * b + a_2 * b\n",
+    "m = tf.Variable([1., 2.])\n",
+    "opt = tf.train.GradientDescentOptimizer(1)\n",
+    "grad_vars = opt.compute_gradients(c, var_list = [a,a_2,b])\n",
+    "[v.name for g,v in grad_vars]\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(\">>> a:\")\n",
+    "    a.eval()\n",
+    "    print(\">>> grad_vars:\")\n",
+    "    sess.run(grad_vars)\n",
+    "    sess.run(opt.apply_gradients(grad_vars))\n",
+    "    print(\">>> a after GD:\")\n",
+    "    a.eval()\n",
+    "    print(\">>> a_2 after GD:\")\n",
+    "    a_2.eval()\n",
+    "    print(\">>> b after GD:\")\n",
+    "    b.eval()"
    ]
   },
   {
