--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T05:01:09.841343Z",
-     "start_time": "2020-12-15T05:01:09.460791Z"
+     "end_time": "2020-12-28T09:42:05.670787Z",
+     "start_time": "2020-12-28T09:42:05.319270Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T05:01:13.091721Z",
-     "start_time": "2020-12-15T05:01:10.619045Z"
+     "end_time": "2020-12-28T09:42:09.712818Z",
+     "start_time": "2020-12-28T09:42:07.682659Z"
     }
    },
    "outputs": [],
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T05:01:13.110082Z",
-     "start_time": "2020-12-15T05:01:13.104841Z"
+     "end_time": "2020-12-28T09:42:09.751288Z",
+     "start_time": "2020-12-28T09:42:09.746311Z"
     }
    },
    "outputs": [],
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-18T08:24:46.581903Z",
-     "start_time": "2019-10-18T08:24:46.512613Z"
+     "end_time": "2020-12-28T09:42:13.071315Z",
+     "start_time": "2020-12-28T09:42:13.024557Z"
     }
    },
    "outputs": [
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tensorflow.python.client.session.Session object at 0x7f6224e4f0b8>\n"
+      "<tensorflow.python.client.session.Session object at 0x7f5c8311cc90>\n"
      ]
     }
    ],
@@ -5175,12 +5175,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Demo1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T04:02:18.994680Z",
-     "start_time": "2019-08-22T04:02:18.561158Z"
+     "end_time": "2020-12-28T11:28:57.702129Z",
+     "start_time": "2020-12-28T11:28:57.594694Z"
+    },
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subGeohashIdx\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geohashEmbTable\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [3, 3, 3, 3],\n",
+       "       [4, 4, 4, 4],\n",
+       "       [5, 5, 5, 5]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subGeohashEmbs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1.],\n",
+       "        [2., 2., 2., 2.],\n",
+       "        [3., 3., 3., 3.],\n",
+       "        [4., 4., 4., 4.],\n",
+       "        [5., 5., 5., 5.]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "卷积核W\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1.]],\n",
+       "\n",
+       "        [[1.]],\n",
+       "\n",
+       "        [[1.]],\n",
+       "\n",
+       "        [[1.]]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "卷积计算结果conv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 4.]],\n",
+       "\n",
+       "        [[ 8.]],\n",
+       "\n",
+       "        [[12.]],\n",
+       "\n",
+       "        [[16.]],\n",
+       "\n",
+       "        [[20.]]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filterShape: [1, 4, 1, 1]\n",
+      "input-shape: (1, 5, 4, 1)\n",
+      "W-shape: (1, 4, 1, 1)\n",
+      "output-shape: (1, 5, 1, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "SEED=2020\n",
+    "emb_size = 4\n",
+    "geohashEmbTable = tf.random.normal([5,emb_size], seed=SEED)\n",
+    "geohashEmbTable = np.array([[1]*emb_size,\n",
+    "                            [2]*emb_size,\n",
+    "                            [3]*emb_size,\n",
+    "                            [4]*emb_size,\n",
+    "                            [5]*emb_size])\n",
+    "subGeohashIdx = np.array([[0,1,2,3,4]])\n",
+    "subGeohashEmbs = tf.cast(tf.nn.embedding_lookup(geohashEmbTable,subGeohashIdx),dtype=tf.float32)\n",
+    "subGeohashEmbs_toInp = tf.expand_dims(subGeohashEmbs,-1)\n",
+    "\n",
+    "filterSize = 1 # 卷积核大小\n",
+    "in_channels =1 # 输入的通道\n",
+    "numFilters = 1 # 卷积核的个数\n",
+    "filterShape = [filterSize, emb_size, in_channels, numFilters] # 构建conv2d使用的filter参数\n",
+    "W = tf.convert_to_tensor(tf.ones(filterShape), name=\"W\")  # 卷积核 \n",
+    "conv = tf.nn.conv2d(input=subGeohashEmbs_toInp,\n",
+    "                filter=W,\n",
+    "                strides=[1, 1, 1, 1],\n",
+    "                padding=\"VALID\",\n",
+    "                name=\"conv\")\n",
+    "\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    print(\"subGeohashIdx\")\n",
+    "    subGeohashIdx\n",
+    "    print(\"geohashEmbTable\")\n",
+    "    geohashEmbTable\n",
+    "    print(\"subGeohashEmbs\")\n",
+    "    subGeohashEmbs.eval()\n",
+    "    print(\"卷积核W\")\n",
+    "    W.eval()\n",
+    "    print(\"卷积计算结果conv\")\n",
+    "    conv.eval()\n",
+    "    print(\"filterShape: %s\" % filterShape)\n",
+    "    print(\"input-shape: %s\" % subGeohashEmbs_toInp.shape)\n",
+    "    print(\"W-shape: %s\" % W.shape)\n",
+    "    print(\"output-shape: %s\" % conv.shape)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Demo2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-28T09:27:44.585883Z",
+     "start_time": "2020-12-28T09:27:44.297662Z"
     },
     "scrolled": false
    },
@@ -5191,9 +5380,16 @@
        "TensorShape([Dimension(1), Dimension(3), Dimension(6), Dimension(1)])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 输入卷积的数据embeddedWordsExpanded的shape\n"
+     ]
     },
     {
      "data": {
@@ -5201,9 +5397,16 @@
        "array([1, 3, 6, 1], dtype=int32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 整个卷积W的shape\n"
+     ]
     },
     {
      "data": {
@@ -5211,9 +5414,16 @@
        "array([2, 6, 1, 4], dtype=int32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 整个卷积操作的结果conv的shape\n"
+     ]
     },
     {
      "data": {
@@ -5221,7 +5431,7 @@
        "array([1, 2, 1, 4], dtype=int32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5250,7 +5460,7 @@
        "         [60. ]]]], dtype=float32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5290,7 +5500,7 @@
        "        [[1., 1., 1., 1.]]]], dtype=float32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5307,7 +5517,7 @@
        "array([0.1, 0.1, 0.1, 0.1], dtype=float32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5326,7 +5536,7 @@
        "        [[212.1, 212.1, 212.1, 212.1]]]], dtype=float32)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5361,8 +5571,11 @@
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "#     embeddedWords.eval()\n",
+    "    print(\">>> 输入卷积的数据embeddedWordsExpanded的shape\")\n",
     "    tf.shape(embeddedWordsExpanded).eval()\n",
+    "    print(\">>> 整个卷积W的shape\")\n",
     "    tf.shape(W).eval()\n",
+    "    print(\">>> 整个卷积操作的结果conv的shape\")\n",
     "    tf.shape(conv).eval()\n",
     "    embeddedWordsExpanded.eval()\n",
     "#     tf.shape(W).eval()\n",
