--- a/TensorflowEstimatorNFeatureColumn.ipynb
+++ b/TensorflowEstimatorNFeatureColumn.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 处理TFRecord"
+    "# 处理TFRecord | tf1.x"
    ]
   },
   {
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T07:42:15.733518Z",
-     "start_time": "2020-12-09T07:42:15.485845Z"
+     "end_time": "2020-12-29T09:48:48.363063Z",
+     "start_time": "2020-12-29T09:48:48.214270Z"
     },
     "run_control": {
      "marked": true
@@ -171,42 +171,42 @@
      "text": [
       "[featName]:dnnCrsCurRoad [type]:int64_list [value_example]:[8593260L]\n",
       "[featName]:dnnCrsDragRoad [type]:int64_list [value_example]:[-1L]\n",
-      "[featName]:dnnCrsPoiRoad [type]:int64_list [value_example]:[8593262L]\n",
-      "[featName]:dnnDGlobalTime [type]:int64_list [value_example]:[8655481L]\n",
-      "[featName]:dnnNpoiDis [type]:float_list [value_example]:[0.9300000071525574]\n",
-      "[featName]:dnnPGlobalTime [type]:int64_list [value_example]:[8655390L]\n",
-      "[featName]:dnncCurrentDis [type]:float_list [value_example]:[27.799999237060547]\n",
-      "[featName]:dnncPoiDis [type]:float_list [value_example]:[23.520000457763672]\n",
+      "[featName]:dnnCrsPoiRoad [type]:int64_list [value_example]:[-1L]\n",
+      "[featName]:dnnDGlobalTime [type]:int64_list [value_example]:[8663673L]\n",
+      "[featName]:dnnNpoiDis [type]:float_list [value_example]:[0.0]\n",
+      "[featName]:dnnPGlobalTime [type]:int64_list [value_example]:[8663582L]\n",
+      "[featName]:dnncCurrentDis [type]:float_list [value_example]:[30.520000457763672]\n",
+      "[featName]:dnncPoiDis [type]:float_list [value_example]:[0.0]\n",
       "[featName]:dnncRgeoDis [type]:float_list [value_example]:[0.0]\n",
-      "[featName]:dnnpidDropoffHeat [type]:float_list [value_example]:[4.0]\n",
-      "[featName]:dnnpidDropoffRatio [type]:float_list [value_example]:[6.659999847412109]\n",
-      "[featName]:dnnpidLBChargeTime [type]:float_list [value_example]:[0.0]\n",
+      "[featName]:dnnpidDropoffHeat [type]:float_list [value_example]:[1.0]\n",
+      "[featName]:dnnpidDropoffRatio [type]:float_list [value_example]:[2.700000047683716]\n",
+      "[featName]:dnnpidLBChargeTime [type]:float_list [value_example]:[11.020000457763672]\n",
       "[featName]:dnnpidLFChargeTime [type]:float_list [value_example]:[0.0]\n",
-      "[featName]:dnnpidPickupHeat [type]:float_list [value_example]:[8.0]\n",
-      "[featName]:dnnpidRatio [type]:float_list [value_example]:[13.789999961853027]\n",
+      "[featName]:dnnpidPickupHeat [type]:float_list [value_example]:[1.0]\n",
+      "[featName]:dnnpidRatio [type]:float_list [value_example]:[2.700000047683716]\n",
       "[featName]:dnnpidTrajNum [type]:float_list [value_example]:[0.0]\n",
       "[featName]:dnnpidTrajRatio [type]:float_list [value_example]:[0.0]\n",
       "[featName]:dnnpoiDropoffRatio [type]:float_list [value_example]:[0.0]\n",
-      "[featName]:dnnpoiRatio [type]:float_list [value_example]:[19.709999084472656]\n",
-      "[featName]:dnnpsw [type]:float_list [value_example]:[16.0]\n",
+      "[featName]:dnnpoiRatio [type]:float_list [value_example]:[0.0]\n",
+      "[featName]:dnnpsw [type]:float_list [value_example]:[9.520000457763672]\n",
       "[featName]:hourIdx [type]:int64_list [value_example]:[8593274L]\n",
-      "[featName]:label [type]:int64_list [value_example]:[3L, 2L]\n",
-      "[featName]:link [type]:int64_list [value_example]:[9297929L]\n",
+      "[featName]:label [type]:int64_list [value_example]:[1L, 0L]\n",
+      "[featName]:link [type]:int64_list [value_example]:[5106239L]\n",
       "[featName]:locHash [type]:int64_list [value_example]:[-1L]\n",
-      "[featName]:pickupHash [type]:int64_list [value_example]:[5063647L]\n",
-      "[featName]:pid [type]:int64_list [value_example]:[-1L]\n",
+      "[featName]:pickupHash [type]:int64_list [value_example]:[15308029L]\n",
+      "[featName]:pid [type]:int64_list [value_example]:[11148229L]\n",
       "[featName]:poi [type]:int64_list [value_example]:[-1L]\n",
       "[featName]:rgeoHash [type]:int64_list [value_example]:[-1L]\n",
-      "[featName]:timeIdx [type]:int64_list [value_example]:[12273629L]\n",
-      "[featName]:weekDay [type]:int64_list [value_example]:[8593266L]\n",
-      "[featName]:wideFeatures [type]:int64_list [value_example]:[10858061L, -1L, -1L, -1L, 19158838L, 19158842L, 19158848L, 19158855L, 19158863L, 19158873L, -1L, 19158888L, -1L, 19158901L, 19158908L, -1L, -1L, -1L, -1L, 19158945L, 19391765L, 19391866L, 19158951L, 19158953L, -1L, 19158957L, 19158965L, 26750457L, 19391973L, 19396777L, 19396811L, 19396839L, 82629406L, 65402163L, -1L, -1L, -1L, -1L, -1L, -1L, -1L, -1L]\n",
+      "[featName]:timeIdx [type]:int64_list [value_example]:[12295548L]\n",
+      "[featName]:weekDay [type]:int64_list [value_example]:[8593272L]\n",
+      "[featName]:wideFeatures [type]:int64_list [value_example]:[34301604L, 23055650L, -1L, -1L, 19158838L, 19158842L, 19158846L, -1L, 19158863L, -1L, -1L, 19158887L, -1L, 19158900L, -1L, -1L, -1L, -1L, 19158941L, 19158943L, 19391765L, 19391866L, 19158951L, -1L, -1L, 19158963L, 19158965L, 26750427L, 19391955L, 19396777L, 78451684L, -1L, 76456028L, -1L, -1L, -1L, -1L, -1L, -1L, -1L]\n",
       "[featName]:wifi [type]:int64_list [value_example]:[-1L, -1L, -1L, -1L, -1L, -1L, -1L, -1L]\n"
      ]
     }
    ],
    "source": [
     "# trd_dir=\"/tmp-data/zhoutongzt/DD/Data/BR_useReqTime_addCross_test\"\n",
-    "trd_dir = \"/nfs/map-tmp-vol0/zhoutong/Data\"+\"/BR_useReqTime_expTryMMOE_train\"\n",
+    "trd_dir = \"/tmp-data/zhoutongzt/DD/Data/BR_useReqTime_expTryMMOE_train\"\n",
     "trd_fp = [os.path.join(trd_dir,i) for i in os.listdir(trd_dir)]\n",
     "trd=tf.data.TFRecordDataset(trd_fp,compression_type='GZIP')\n",
     "iterator=trd.make_one_shot_iterator()\n",
@@ -340,11 +340,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 198,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-29T09:48:22.757067Z",
+     "start_time": "2020-12-29T09:48:22.649407Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "dataset.__iter__() is only supported when eager execution is enabled.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-198-aa6f5e496829>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrd_unparsed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTFRecordDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrd_fp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcompression_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'GZIP'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mraw_record\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrd_unparsed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mexample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mParseFromString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_record\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp-data/luban/anaconda3/envs/tf1.12/lib/python2.7/site-packages/tensorflow/python/data/ops/dataset_ops.pyc\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    165\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0miterator_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEagerIterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 167\u001b[0;31m       raise RuntimeError(\"dataset.__iter__() is only supported when eager \"\n\u001b[0m\u001b[1;32m    168\u001b[0m                          \"execution is enabled.\")\n\u001b[1;32m    169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: dataset.__iter__() is only supported when eager execution is enabled."
+     ]
+    }
+   ],
    "source": [
     "trd_dir = \"/nfs/map-tmp-vol0/zhoutong/Data/BR_useReqTime_addCross_addTimeByFreq_train\"\n",
+    "trd_dir = \"/tmp-data/zhoutongzt/DD/Data/BR_useReqTime_expTryMMOE_train\"\n",
     "trd_fp = [os.path.join(trd_dir,i) for i in os.listdir(trd_dir)]\n",
     "trd_unparsed=tf.data.TFRecordDataset(trd_fp,compression_type='GZIP')\n",
     "\n",
@@ -861,11 +880,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 186,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-18T07:27:44.217697Z",
-     "start_time": "2020-11-18T07:27:44.151838Z"
+     "end_time": "2020-12-28T16:15:51.957830Z",
+     "start_time": "2020-12-28T16:15:51.892950Z"
     },
     "run_control": {
      "marked": true
@@ -876,14 +895,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'featA': array([[19],\n",
-      "       [19]]), 'pickupHash': array([[15],\n",
-      "       [ 8]]), 'time_idx': array([[9],\n",
-      "       [1]]), 'numericB': [[0.5], [0.2]], 'numericA': [[0.5], [1.2]], 'link': [[-1], [-1]], 'hour_idx': array([[5],\n",
-      "       [2]]), 'whateverB': array([[15],\n",
-      "       [ 0]]), 'whateverA': array([[17],\n",
-      "       [16]]), 'featB': array([[1],\n",
-      "       [2]])}\n"
+      "{'featA': array([[ 6],\n",
+      "       [10]]), 'pickupHash': array([[ 9],\n",
+      "       [17]]), 'time_idx': array([[2],\n",
+      "       [5]]), 'numericB': [[0.5], [0.2]], 'numericA': [[0.5], [1.2]], 'link': [[-1], [-1]], 'hour_idx': array([[12],\n",
+      "       [ 5]]), 'whateverB': array([[10],\n",
+      "       [ 6]]), 'whateverA': array([[8],\n",
+      "       [9]]), 'featB': array([[8],\n",
+      "       [5]])}\n"
      ]
     }
    ],
@@ -937,6 +956,60 @@
     "# 指出将要相加的emb\n",
     "emb_to_add=[['link','hour_idx'],\n",
     "            ['pickupHash','time_idx']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 说明一下获取column的名字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-28T16:28:39.239804Z",
+     "start_time": "2020-12-28T16:28:39.221162Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'featA_shared_embedding'"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'featA'"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'numericA'"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fc_emb_dict['featA'].name\n",
+    "fc_emb_dict['featA'].categorical_column.key\n",
+    "fc_numeric[0].name"
    ]
   },
   {
