update: add some demo

--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-28T09:42:05.670787Z",
-     "start_time": "2020-12-28T09:42:05.319270Z"
+     "end_time": "2021-01-13T02:59:23.864220Z",
+     "start_time": "2021-01-13T02:59:23.845904Z"
     }
    },
    "outputs": [],
@@ -32,17 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-28T09:42:09.712818Z",
-     "start_time": "2020-12-28T09:42:07.682659Z"
+     "end_time": "2021-01-13T02:59:25.651873Z",
+     "start_time": "2021-01-13T02:59:25.647567Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import psutil\n",
     "import tensorflow as tf\n",
+    "tf.__version__\n",
     "# import tensorflow_hub as hub"
    ]
   },
@@ -55,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-28T09:42:09.751288Z",
-     "start_time": "2020-12-28T09:42:09.746311Z"
+     "end_time": "2021-01-13T02:59:26.817275Z",
+     "start_time": "2021-01-13T02:59:26.813887Z"
     }
    },
    "outputs": [],
@@ -70,19 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-28T09:42:13.071315Z",
-     "start_time": "2020-12-28T09:42:13.024557Z"
+     "end_time": "2021-01-13T02:59:28.403165Z",
+     "start_time": "2021-01-13T02:59:28.388383Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tensorflow.python.client.session.Session object at 0x7f5c8311cc90>\n"
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'ConfigProto'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-8bf2fc18ab69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 允许GPU渐进占用\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msess_conf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConfigProto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msess_conf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgpu_options\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallow_growth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m  \u001b[0;31m# 允许GPU渐进占用\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msess_conf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallow_soft_placement\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m  \u001b[0;31m# 把不适合GPU的放到CPU上跑\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msess_conf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'ConfigProto'"
      ]
     }
    ],
@@ -3409,6 +3425,107 @@
    "metadata": {},
    "source": [
     "## gradient相关"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 非常pythonic的循环赋值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "计算梯度的时候考虑 cur_g_last 具体来说现在是 `y=x*(cur_g_last + x)` 这里`cur_g_last`相当于一个常数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-13T03:40:35.713797Z",
+     "start_time": "2021-01-13T03:40:35.661052Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current g_tmp: 0.0  x: 1.0\n",
+      "current dy_dx:3.0 cur_g:2.0 \n",
+      "current g_tmp: 1.0  x: 2.0\n",
+      "current dy_dx:10.0 cur_g:6.0 \n",
+      "current g_tmp: 4.0  x: 3.0\n",
+      "current dy_dx:21.0 cur_g:12.0 \n",
+      "current g_tmp: 9.0  x: 4.0\n",
+      "current dy_dx:36.0 cur_g:20.0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "g_tmp = tf.constant(0.0)\n",
+    "cur_g = tf.constant(0.0)\n",
+    "for x in [1,2,3,4]:\n",
+    "    x = tf.constant(float(x))\n",
+    "    print(\"current g_tmp: {}  x: {}\".format(g_tmp.numpy(), x.numpy()))\n",
+    "    with tf.GradientTape() as g:\n",
+    "        g.watch(x)\n",
+    "        g_tmp = cur_g + x\n",
+    "        y = x * g_tmp\n",
+    "    cur_g = g.gradient(y, x)\n",
+    "    dy_dx = cur_g + g_tmp\n",
+    "    print(\"current dy_dx:{} cur_g:{} \".format(dy_dx.numpy(),cur_g.numpy()))\n",
+    "# dy_dx.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "计算梯度的时候不考虑 cur_g_last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-13T03:52:55.339557Z",
+     "start_time": "2021-01-13T03:52:55.278648Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current g_tmp:  0.0\n",
+      "current dy_dx:  2.0\n",
+      "current g_tmp:  2.0\n",
+      "current dy_dx:  6.0\n",
+      "current g_tmp:  6.0\n",
+      "current dy_dx:  12.0\n",
+      "current g_tmp:  12.0\n",
+      "current dy_dx:  20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "g_tmp = tf.constant(0.0)\n",
+    "for x in [1,2,3,4]:\n",
+    "    x = tf.constant(float(x))\n",
+    "    print(\"current g_tmp: \", g_tmp.numpy())\n",
+    "    with tf.GradientTape() as g:\n",
+    "        g.watch(x)\n",
+    "        y = x * x\n",
+    "    dy_dx = g.gradient(y, x) + g_tmp\n",
+    "    g_tmp = dy_dx\n",
+    "    print(\"current dy_dx: \",dy_dx.numpy())\n",
+    "# dy_dx.numpy()"
    ]
   },
   {
@@ -7172,21 +7289,21 @@
    "id": ""
   },
   "kernelspec": {
-   "display_name": "Python2.7(tf1.12)",
+   "display_name": "Python3.7(tf2)",
    "language": "python",
-   "name": "tf1.12"
+   "name": "tf2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
