--- a/DeepFM_TF2.ipynb
+++ b/DeepFM_TF2.ipynb
@@ -2860,8 +2860,6 @@
      "start_time": "2020-05-13T07:02:54.688439Z"
     },
     "code_folding": [
-     0,
-     9,
      15
     ]
    },
@@ -2948,8 +2946,8 @@
      "start_time": "2020-05-13T13:41:24.411673Z"
     },
     "code_folding": [
+     0,
      7,
-     34,
      59,
      81,
      117,
@@ -3471,9 +3469,7 @@
      "end_time": "2020-05-13T02:45:38.902468Z",
      "start_time": "2020-05-13T02:45:38.875672Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "run_control": {
@@ -4162,6 +4158,7 @@
      91,
      100,
      117,
+     127,
      146
     ]
    },
@@ -4595,7 +4592,6 @@
      "start_time": "2020-05-19T12:33:05.790357Z"
     },
     "code_folding": [
-     0,
      54
     ],
     "scrolled": false
@@ -4762,9 +4758,7 @@
      "end_time": "2020-05-19T14:08:37.553491Z",
      "start_time": "2020-05-19T12:33:17.300157Z"
     },
-    "code_folding": [
-     16
-    ],
+    "code_folding": [],
     "scrolled": false
    },
    "outputs": [
@@ -5560,9 +5554,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.7(tf2)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5574,7 +5568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
